Kategorizavimo modelis naujos klasės TextClassificationDataset ir TextClassificationtranslator